# tandarunner

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  db.sqlite3  pyproject.toml  requirements-dev.txt  requirements.txt  training_plan.ics
config/: asgi.py  settings.py  urls.py
notebooks/: chat.ipynb  data-ingestion.ipynb  strava-data.ipynb
research/: data_pipeline.py  react_bot.py  react_bot_with_tools.py
scripts/: dump_activities.py  strava_agent.py
static/css/: styles.css
static/dummy/: running_activities.csv  temp_viz.pkl
static/js/: index.js
tandarunner/: apps.py  chat.py  consumers.py  helpers.py  models.py  routing.py  urls.py  views.py  visualizations.py
tandarunner/agents/: deps.py  tools.py
tandarunner/agents/chat/: agent.py  consumer.py  prompts.py
tandarunner/agents/plan/: agent.py  consumer.py  prompts.py  schemas.py
tandarunner/chat_agent/: agent.py  prompts.py  tools.py
tandarunner/migrations/: 0001_initial.py  0002_delete_traininginsight.py  0003_initial.py  0004_trainingplan_achievability.py  0005_remove_trainingplan_goal_and_more.py
tandarunner/scripts/: generate_insights.py  types_prompts.py
tandarunner/templatetags/: markdown_extras.py
tandarunner/tools/: types_prompts.py
templates/: index.html
templates/partials/: chat.html  final_message.html  graphs.html  message.html  plan.html  plan_result.html  stats.html
tests/: test_api.py  test_tandarunner.py
